--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<body  style="background-color:Cornsilk"> 
+<h1 style="color:blue;text-align:center">  Hello World </h1>
+<p style="font-family:arial;color:red;font-size:20px;text-align:center"> I'm hosted with GitHub Pages. </p>
+<p style="font-family:arial;color:green;font-size:30px;text-align:center"> I'm happy it can works now! </p>
 </body>
 </html>
