--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
-<body  style="background-color:Cornsilk"> 
+<body  style="text-align:center;background-color:Cornsilk"> 
 <h1 style="color:blue;text-align:center">  Hello World </h1>
 <p style="font-family:arial;color:red;font-size:20px;text-align:center"> I'm hosted with GitHub Pages. </p>
 <p style="font-family:arial;color:green;font-size:30px;text-align:center"> I'm happy it can works now! </p>
+<video width="640" height="480"  controls preload>
+ 
+  <source src="ps.mp4" media="only screen and (max-device-width: 568px)"> </source>
+  Your browser does not support the video element. Kindly update it to latest version.
+</video >
+
 </body>
 </html>
